preparing for andruav

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,26 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "(gdb) Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "{workspaceFolder}/bin/uavos_ardupilot.so",
+            "processId": "${command:pickProcess}",
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/uavos_ardupilot.so",
-            "args": ["-u", "127.0.0.1",  
-                "-p", "16450"],
+            "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}/bin/",
             "environment": [],
