--- a/config.module.json
+++ b/config.module.json
@@ -30,6 +30,12 @@
     "groupID": "1",
   
   
+
+    "Message_Timeouts":
+    { 
+      "1": [0,250,500,1000],
+      "2": [0,250,500,1000]
+    },
   
     "RC_channelReverse": [1,-1,1,1,1,1,1,1],
     "RC_channelLimitsMax": [1850,2000,2000,2000,2000,2000,2000,2000],
@@ -40,5 +46,6 @@
     "rudder_P": 0, "rudder_I": 0, "rudder_D": 0, 
     "aliron_P": 50, "aliron_I":5, "aliron_D": 0}
 
+    
   }
   
