fixes reading JSON RC refreash

--- a/config.module.json
+++ b/config.module.json
@@ -36,11 +36,14 @@
       "1": [0,250,500,1000],
       "2": [0,250,500,1000]
     },
-  
+
+    "RC_Channels":
+    {
+    "RC_channelEnabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
     "RC_channelReverse": [1,-1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
     "RC_channelLimitsMax": [1850,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
-    "RC_channelLimitsMin": [1150,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000],
-  
+    "RC_channelLimitsMin": [1150,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
+    },
     
     "Traking_PID": {"elevator_P": 50, "elevator_I": 5, "elevator_D": 0, 
     "rudder_P": 0, "rudder_I": 0, "rudder_D": 0, 
