--- a/config.module.json
+++ b/config.module.json
@@ -12,7 +12,7 @@
   "fcbConnectionURI": 
   {"type": "udp",
     "ip": "0.0.0.0",
-    "port":14551
+    "port":14550
   },
 
   "fcbConnectionURI_serial":
@@ -34,10 +34,32 @@
   
   "Message_Timeouts":
   { 
-    "1": [0,250,500,1000],
-    "2": [0,250,500,1000]
+        "1": [0,250,500,1000],
+        "2": [0,250,500,1000],     // SYSTEM_TIME
+       "24": [0,250,500,800],      // GPS_RAW_INT
+       "27": [0,250,1000,2000],    // RAW_IMU
+       "28": [0,500,1000,2000],    // RAW_PRESSURE
+       "30": [0,250,500,1000],     // ATTITUDE
+       "62": [0,250,500,1000],     // NAV_CONTROLLER_OUTPUT
+       "42": [0,250,500,1000],     // MISSION_CURRENT
+       "74": [0,500,1000,2000],    // VFR_HUD 
+      "152": [0,500,1000,2000],    // MEMINO
+      "163": [0,250,500,1000],     // AHRS
+      "178": [0,250,500,1000],     // AHRS2
+      "182": [0,250,500,1000],     // AHRS3
+      "136": [0,250,500,1000],     // TERRAIN_REPORT
+      "165": [0,250,1000,2000],    // HWSTATUS
+      "193": [0,250,500,1000],     // EKF_STATUS_REPORT
+       "29": [0,250,1000,2000],    // SCALED_PRESSURE
+      "137": [0,250,1000,2000],    // SCALED_PRESSURE2
+      "143": [0,250,1000,2000],    // SCALED_PRESSURE3
+      "241": [0,250,1000,2000],    // VIBRATION 
+    "11030": [0,250,500,1000],     // ESC_TELEMETRY_1_TO_4
+    "11031": [0,250,500,1000],     // ESC_TELEMETRY_5_TO_8
+    "11032": [0,250,500,1000]     // ESC_TELEMETRY_9_TO_12
+      
   },
-
+  
   "RC_Channels":
   {
   "RC_channelEnabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
