--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mavlink/include/mavlink/v2.0"]
 	path = mavlink/include/mavlink/v2.0
 	url = git://github.com/mavlink/c_library_v2.git
+[submodule "c_library_v2"]
+	path = c_library_v2
+	url = git://github.com/mavlink/c_library_v2.git
