refact:common_code

--- a/config_plane.json
+++ b/config_plane.json
@@ -12,7 +12,7 @@
   "fcbConnectionURI": 
   {"type": "udp",
     "ip": "0.0.0.0",
-    "port":14550
+    "port":14451
   },
 
   "fcbConnectionURI2":
@@ -41,7 +41,7 @@
   "RC_Channels":
   {
   "RC_channelEnabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-  "RC_channelReverse": [1,-1, -1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+  "RC_channelReverse": [1,1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
   "RC_channelLimitsMax": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
   "RC_channelLimitsMin": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
   },
