--- a/config_drone.json
+++ b/config_drone.json
@@ -9,7 +9,7 @@
   
   
   "telemetryLevel": "1", 
-  "fcbConnectionURI": 
+  "fcb_connection_uri": 
   {
     "type": "udp",
     "ip": "0.0.0.0",
@@ -30,20 +30,20 @@
   "groupID": "1",
 
 
-  "Default_Optimization_Level" : 2,
+  "default_optimization_level" : 2,
   
-  "Message_Timeouts":
+  "message_timeouts":
   { 
     "1": [0,250,500,1000],
     "2": [0,250,500,1000]
   },
 
-  "RC_Channels":
+  "rc_channels":
   {
-  "RC_channelEnabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-  "RC_channelReverse": [1,-1, -1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-  "RC_channelLimitsMax": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
-  "RC_channelLimitsMin": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
+  "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+  "rc_channel_reverse": [1,-1, -1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+  "rc_channel_limits_max": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
+  "rc_channel_limits_min": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
   },
   
   "Traking_PID": 
