--- a/config.module.json
+++ b/config.module.json
@@ -76,10 +76,19 @@
   // Determine channels enabled, reverse, max & min PWM range
   "rc_channels":
   {
-    "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-    "rc_channel_reverse": [-1, 1, 1, -1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-    "rc_channel_limits_max": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
-    "rc_channel_limits_min": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
+  "rc_smart_channels": 
+  { 
+    "active": true, // if active not specified then it is assumed active by default.
+    
+    // ROLL - PITCH _ THR _ YAW regardless of actual settings on ardupilot 
+    "rc_channel_enabled": [1, 1, 1, 1], // optioan
+    "rc_channel_limits_max": [1991,1992,1750,2000], // optioan
+    "rc_channel_limits_min": [1000,1000,1300,1000] // optioan
+  },
+  "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+  "rc_channel_reverse": [1,1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+  "rc_channel_limits_max": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
+  "rc_channel_limits_min": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
   }
 }
 
