--- a/config.module.json
+++ b/config.module.json
@@ -71,24 +71,33 @@
     "11032": [0,250,500,1000]      // ESC_TELEMETRY_9_TO_12
       
   },
+
   
+
+// should be a channel from 1 to 8. when High all commands from GCS will be ignored including RC-Override.
+"rc_block_channel": 2,
+
+
+
   // Used for Gamepad control via Drone-Engage Web Client
   // Determine channels enabled, reverse, max & min PWM range
-  "rc_channels":
-  {
-  "rc_smart_channels": 
-  { 
-    "active": true, // if active not specified then it is assumed active by default.
-    
-    // ROLL - PITCH _ THR _ YAW regardless of actual settings on ardupilot 
-    "rc_channel_enabled": [1, 1, 1, 1], // optioan
-    "rc_channel_limits_max": [1991,1992,1750,2000], // optioan
-    "rc_channel_limits_min": [1000,1000,1300,1000] // optioan
-  },
-  "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-  "rc_channel_reverse": [1,1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-  "rc_channel_limits_max": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
-  "rc_channel_limits_min": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
+"rc_channels":
+{
+    "rc_smart_channels": // optional but very recommended.
+    { 
+      "active": true, // if active not specified then it is assumed active by default.
+      
+      // ROLL - PITCH _ THR _ YAW regardless of actual settings on ardupilot 
+      "rc_channel_enabled": [1, 1, 1, 1], // optioan
+      "rc_channel_limits_max": [1991,1992,1750,2000], // optional if not exist then global rc_channel_limits_max are used
+      "rc_channel_limits_min": [1000,1000,1300,1000]  // optional if not exist then global rc_channel_limits_min are used
+    },
+    "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+    "rc_channel_reverse": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+    "rc_channel_limits_max": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
+    "rc_channel_limits_min": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
   }
 }
+
+
 
