fix: adding HIGH_LATENCY to optimizer

--- a/config.module.json
+++ b/config.module.json
@@ -77,6 +77,8 @@
       "182": [0,250,500,1000],     // AHRS3
       "193": [0,250,500,1000],     // EKF_STATUS_REPORT
       "241": [0,250,1000,2000],    // VIBRATION 
+      "234": [0,250,1000,2000],    // HIGH_LATENCY 
+      "235": [0,250,1000,2000],    // HIGH_LATENCY2 
     "11030": [0,250,500,1000],     // ESC_TELEMETRY_1_TO_4
     "11031": [0,250,500,1000],     // ESC_TELEMETRY_5_TO_8
     "11032": [0,250,500,1000]      // ESC_TELEMETRY_9_TO_12
