--- a/config.module.json
+++ b/config.module.json
@@ -38,6 +38,10 @@
   // Default optimization level. This number controls the rate at which mavlink is sent in telemetry mode.
   // Adjust it to reduce bandwidth 0 - max bandwidth 3 - min bandwidth
   "default_optimization_level" : 2, 
+  //udp_proxy_enabled: true means to open udpProxy for telemetry on this board.
+  //the connection is created on the machien where this code runs not via communicator module.
+  "udp_proxy_enabled": true,
+
   // This companion computer is remote and not mounted on the vehicle.
   "Vehicle_Is_Remote": true,
 
