features: new parameters readOnly ignoreLoadingParameters

--- a/config.module.json
+++ b/config.module.json
@@ -93,7 +93,8 @@
 
 // should be a channel from 1 to 8. when High all commands from GCS will be ignored including RC-Override.
 "rc_block_channel": 2,
-
+//"read_only_mode": true,
+//"ignore_loading_parameters": false,
 
 
   // Used for Gamepad control via Drone-Engage Web Client
