--- a/config.module.json
+++ b/config.module.json
@@ -53,29 +53,30 @@
   { 
         "1": [0,250,500,1000],
         "2": [0,250,500,1000],     // SYSTEM_TIME
-       "24": [0,250,500,1000],     // GPS_RAW_INT
-       "27": [0,250,1000,2000],    // RAW_IMU
+       "24": [0,800,1000,2000],    // GPS_RAW_INT
+       "27": [0,500,1000,2000],    // RAW_IMU
        "28": [0,500,1000,2000],    // RAW_PRESSURE
        "29": [0,250,1000,2000],    // SCALED_PRESSURE
-       "30": [0,250,800,2000],     // ATTITUDE
+       "30": [0,250,1000,2000],    // ATTITUDE
        "32": [0,250,1000,2000],    // LOCAL_POSITION_NED
        "33": [0,250,1000,2000],    // GLOBAL_POSITION_INT
        "34": [0,500,1000,2000],    // RC_CHANNELS_SCALED
        "35": [0,500,1000,2000],    // RC_CHANNELS_RAW
        "36": [0,1000,2000,2000],   // SERVO_OUTPUT_RAW
-       "42": [0,250,500,1000],     // MISSION_CURRENT
+       "42": [0,1000,2000,4000],    // MISSION_CURRENT
        "62": [0,250,500,1000],     // NAV_CONTROLLER_OUTPUT
        "65": [0,500,1000,2000],    // RC_CHANNELS
        "74": [0,500,1000,2000],    // VFR_HUD 
-       "87": [0,250,500,1000],     // POSITION_TARGET_GLOBAL_INT
+       "87": [0,500,1000,1000],     // POSITION_TARGET_GLOBAL_INT
        "116": [0,1000,2000,4000],  // SCALED_IMU2
+       "124": [0,800,1000,2000],   // GPS2_RAW
        "125": [0,1000,2000,4000],  // POWER STATUS
        "129": [0,1000,2000,4000],  // SCALED_IMU3
        "136": [0,250,500,1000],    // TERRAIN_REPORT
        "137": [0,250,1000,2000],   // SCALED_PRESSURE2
        "143": [0,250,1000,2000],   // SCALED_PRESSURE3
        "147": [0,250,2000,4000],   // BATTERY_STATUS
-       "152": [0,1000,1000,2000],  // MEMINO
+       "152": [0,4000,8000,12000],  // MEMINO
       "163": [0,250,500,1000],     // AHRS
       "165": [0,250,1000,2000],    // HWSTATUS
       "178": [0,250,500,1000],     // AHRS2
@@ -84,9 +85,9 @@
       "241": [0,250,1000,2000],    // VIBRATION 
       "234": [0,250,1000,2000],    // HIGH_LATENCY 
       "235": [0,250,1000,2000],    // HIGH_LATENCY2 
-    "11030": [0,250,500,1000],     // ESC_TELEMETRY_1_TO_4
-    "11031": [0,250,500,1000],     // ESC_TELEMETRY_5_TO_8
-    "11032": [0,250,500,1000]      // ESC_TELEMETRY_9_TO_12
+    "11030": [0,1000,2000,5000],   // ESC_TELEMETRY_1_TO_4
+    "11031": [0,1000,2000,5000],   // ESC_TELEMETRY_5_TO_8
+    "11032": [0,1000,2000,5000]    // ESC_TELEMETRY_9_TO_12
       
   },
 
