--- a/config.module.json
+++ b/config.module.json
@@ -20,21 +20,22 @@
   // },
    
   // Using serial interface: static port 
-  "fcb_connection_uri":
-  {
-    "type": "serial",
-    "port": "/dev/ttyUSB1",
-    "baudrate": 115200,
-    "dynamic": false
-  },
-
-  // "fcb_connection_uri": dynamic port search -- it will scan ports /dev/ttyUSB0 to /dev/ttyUSB10
+  // "fcb_connection_uri":
   // {
   //   "type": "serial",
-  //   "port": "/dev/ttyUSB",
+  //   "port": "/dev/ttyUSB1",
   //   "baudrate": 115200,
-  //   "dynamic": true
+  //   "dynamic": false
   // },
+
+  // Using serial interface: dynamic port search -- it will scan ports /dev/ttyUSB0 to /dev/ttyUSB10
+  "fcb_connection_uri": 
+  {
+    "type": "serial",
+    "port": "/dev/ttyUSB",
+    "baudrate": 115200,
+    "dynamic": true
+  },
 
   
   
@@ -55,7 +56,8 @@
   "event_wait_channel": 15,
   
   "read_only_mode": false,
-  "ignore_loading_parameters": true,
+  // you can ignore loading parameters but the R/C Gamepad will not work.
+  "ignore_loading_parameters": false,
 
   "message_timeouts":
   { 
