--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -53,7 +53,10 @@
   //udp_proxy_enabled: true means to open udpProxy for telemetry on this board.
   //the connection is created on the machien where this code runs not via communicator module.
   "udp_proxy_enabled": true,
-  
+  // udp_proxy_fixed_port can be changed from webclient.
+  // even if you deleted this field you are still 
+  "udp_proxy_fixed_port":15412,
+
   "event_fire_channel": 16,
   "event_wait_channel": 15,
   
