--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Attach",
             "type": "cppdbg",
             "request": "attach",
-            "program": "{workspaceFolder}/bin/de_ardupilot.so",
+            "program": "${workspaceFolder}/bin/de_ardupilot.so",
             "processId": "${command:pickProcess}",
             "MIMode": "gdb",
             "setupCommands": [
