FEATURE: Adjustable UDP Packet Size

--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -9,7 +9,7 @@
   // IP & Port of this module
   "s2s_udp_listening_ip": "127.0.0.1", 
   "s2s_udp_listening_port": "61003", 
-  
+  "s2s_udp_packet_size": 8192,
   
   // How to connect to Ardupilot board
   // Using udp connection
