UPdate: rename name spaces and change UAVOS to DroneEngage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ file(GLOB folder_sdk "./mavlink_sdk/src/*.cpp")
 file(GLOB folder_sdk_helper "./mavlink_sdk/src/helpers/*.cpp")
 file(GLOB folder_src "./src/*.cpp")
 file(GLOB folder_helpers "./src/helpers/*.cpp")
-file(GLOB folder_uavos "./src/uavos_common/*.cpp")
+file(GLOB folder_uavos "./src/de_common/*.cpp")
 file(GLOB folder_mission "./src/mission/*.cpp")
 file(GLOB folder_geofence "./src/geofence/*.cpp")
 file(GLOB folder_swarm "./src/swarm/*.cpp")
