--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -56,8 +56,8 @@
   // even if you deleted this field you are still 
   //"udp_proxy_fixed_port":15412,
 
-  //"event_fire_channel": 16,
-  //"event_wait_channel": 15,
+  "event_fire_channel": 16,
+  "event_wait_channel": 15,
   
   "read_only_mode": false,
   // you can ignore loading parameters but the R/C Gamepad will not work.
