feature: tracking feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,12 +100,13 @@ file(GLOB folder_mission "./src/mission/*.cpp")
 file(GLOB folder_geofence "./src/geofence/*.cpp")
 file(GLOB folder_general_mission_planner "./src/de_general_mission_planner/*.cpp")
 file(GLOB folder_swarm "./src/swarm/*.cpp")
+file(GLOB folder_tracking "./src/tracking/*.cpp")
 
 
 
 set(files ${folder_src} ${folder_uavos} ${folder_helpers}
  ${folder_mission} ${folder_geofence}  ${folder_swarm}
- ${folder_sdk} ${folder_sdk_helper} ${folder_general_mission_planner})
+ ${folder_sdk} ${folder_sdk_helper} ${folder_tracking} ${folder_general_mission_planner})
 
 include_directories(${PROJECT_SOURCE_DIR}/3rdparty)
 include_directories (${PROJECT_SOURCE_DIR}/mavlink_sdk/src)
