feature: extra fields for follow me on config

--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -132,7 +132,16 @@
     "rc_channel_reverse": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
     "rc_channel_limits_max": [1850,2000,1750,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
     "rc_channel_limits_min": [1150,1000,1300,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
-  }
+},
+
+"follow_me":
+{
+  "PID_P_X": 1.0,
+  "PID_P_Y": 1.0,
+  "PID_I_X": 0.01,
+  "PID_I_Y": 0.01,
+  "smoothing": 0.2
+}
 }
 
 
