feature: handle m_flight_information, and update message optimization numbers

--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -104,7 +104,9 @@
       "241": [0,250,1000,2000],    // VIBRATION 
       "234": [0,250,1000,2000],    // HIGH_LATENCY 
       "235": [0,250,1000,2000],    // HIGH_LATENCY2 
-    "11030": [0,1000,2000,5000],   // ESC_TELEMETRY_1_TO_4
+      "264": [0,1000,3000,4000],    // FLIGHT_INFORMATION
+      "285": [0,1000,1000,2000],    // GIMBAL_DEVICE_ATTITUDE_STATUS
+    "11030": [0,500,1000,5000],   // ESC_TELEMETRY_1_TO_4
     "11031": [0,1000,2000,5000],   // ESC_TELEMETRY_5_TO_8
     "11032": [0,1000,2000,5000]    // ESC_TELEMETRY_9_TO_12
       
