--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -13,11 +13,17 @@
   // How to connect to Ardupilot board
   // Using udp connection
   "fcb_connection_uri": 
-  {"type": "udp",
-    "ip": "0.0.0.0",
-    "port":14551
+  {"type": "tcp",
+   "ip": "0.0.0.0",
+   "port":14551
   },
    
+  //"fcb_connection_uri": 
+  //{"type": "tcp",
+  //"ip": "127.0.0.1",
+  //  "port":5760
+  //},
+
   // Using serial interface: static port 
   // "fcb_connection_uri":
   // {
