--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -13,7 +13,7 @@
   // How to connect to Ardupilot board
   // Using udp connection
   "fcb_connection_uri": 
-  {"type": "tcp",
+  {"type": "udp",
    "ip": "0.0.0.0",
    "port":14551
   },
@@ -72,6 +72,7 @@
 
   "message_timeouts":
   { 
+        "0": [0,1000,2000,3000],
         "1": [0,250,500,1000],
         "2": [0,250,500,1000],     // SYSTEM_TIME
        "24": [0,800,1000,2000],    // GPS_RAW_INT
